# dense_depth_priors_nerf

./: .gitignore  LICENSE  README.md  requirements.txt  run_depth_completion.py  run_nerf.py
data/: __init__.py  dataset_sampling.py  error_sources.py  load_scene.py  scannet_dataset.py
docs/: index.html  w3.css
docs/static/js/: index.js
metric/: __init__.py  rmse.py
model/: __init__.py  cspn.py  cspn_affinity.py  run_nerf_helpers.py
preprocessing/: CMakeLists.txt  extract_scannet_scene.cpp
preprocessing/camera/: CMakeLists.txt
preprocessing/camera/include/: camera.h
preprocessing/camera/src/: camera.cpp
preprocessing/io/: CMakeLists.txt
preprocessing/io/include/: camera_frames.h  file_utils.h  rgbd.h
preprocessing/io/src/: camera_frames.cpp  file_utils.cpp  rgbd.cpp
preprocessing/io_colmap/: CMakeLists.txt
preprocessing/io_colmap/include/: colmap_reader.h
preprocessing/io_colmap/src/: colmap_reader.cpp
train_utils/: __init__.py  hyperparameter_update.py  logging.py
